[gd_scene load_steps=13 format=2]

[ext_resource path="res://scn/main/road_spawner.gd" type="Script" id=1]
[ext_resource path="res://scn/road/road.tscn" type="PackedScene" id=2]
[ext_resource path="res://scn/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://materials/environment.tres" type="Environment" id=4]
[ext_resource path="res://scn/let/static_let.tscn" type="PackedScene" id=5]
[ext_resource path="res://scn/main/let_spawner.gd" type="Script" id=6]
[ext_resource path="res://scn/main/main.gd" type="Script" id=7]
[ext_resource path="res://import/fonts/font_main.tres" type="DynamicFont" id=8]
[ext_resource path="res://scn/road/Forest1.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.213006
height = 1.04681

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 2.833, 10 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 6.16723, 0.363, 11.0332 )

[node name="main" type="Spatial"]
script = ExtResource( 7 )

[node name="road_spawner" type="Spatial" parent="."]
script = ExtResource( 1 )
road_scene = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0.146995, 17.2831 )
axis_lock_motion_x = true
move_lock_x = true

[node name="targetcam" type="Spatial" parent="player"]
transform = Transform( 1, 0, 0, 0, 0.994515, 0.104598, 0, -0.104598, 0.994515, 0, 1.93232, 3.56654 )

[node name="player_area" type="Area" parent="player"]

[node name="CollisionShape" type="CollisionShape" parent="player/player_area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.795663, 0 )
shape = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0345, -0.101386 )
target = NodePath("../player/targetcam")
speed = 5.0
enabled = true

[node name="let_spawner" type="Spatial" parent="."]
script = ExtResource( 6 )
let_scene = ExtResource( 5 )

[node name="Forest" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 8 )
text = "Score: 0"

[node name="restart_dialog" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="restart_dialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = -20.0
margin_right = 92.5
margin_bottom = 20.0
custom_fonts/font = ExtResource( 8 )
text = "RESTART"
flat = true

[node name="Forest1" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.398 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.1756 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.83624, 0, -10.229 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.88179, 0, -10.229 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0596001, -10.0014 )
shape = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[connection signal="area_entered" from="player/player_area" to="." method="_on_player_area_area_entered"]
[connection signal="area_entered" from="player/player_area" to="road_spawner" method="_on_player_area_area_entered"]
[connection signal="area_entered" from="player/player_area" to="let_spawner" method="_on_player_area_area_entered"]
[connection signal="pressed" from="restart_dialog/Button" to="." method="_on_Button_pressed"]
